--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@getsafle/safle-vault",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Safle Vault is a non-custodial, flexible and highly available crypto wallet which can be used to access dapps, send/receive crypto and store identity. Vault housekeeper SDK is used to manage the vault and provide methods to generate, persist, update the vault and also enable the user to perform several vault related operations.  ",
   "main": "src/index.js",
   "scripts": {
@@ -24,6 +24,8 @@
   "license": "GPL-3.0",
   "homepage": "https://github.com/getsafle/safle-vault#readme",
   "dependencies": {
+    "@ethereumjs/common": "^2.5.0",
+    "@ethereumjs/tx": "^3.3.2",
     "@getsafle/asset-controller": "^1.0.2",
     "@getsafle/safle-identity-wallet": "^1.0.1",
     "@getsafle/vault-eth-controller": "^1.0.0",
@@ -31,8 +33,7 @@
     "browser-passworder": "^2.0.3",
     "crypto-js": "^4.0.0",
     "eth-hd-keyring": "^3.6.0",
-    "ethereumjs-tx": "^2.1.2",
-    "ethereumjs-util": "^7.1.0",
+    "ethereumjs-util": "^7.1.2",
     "get-random-values": "^1.2.2",
     "loglevel": "^1.7.1",
     "obs-store": "^4.0.3",
