--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "@getsafle/asset-controller": "^1.0.2",
     "@getsafle/bsc-wallet-controller": "^1.0.0",
     "@getsafle/safle-identity-wallet": "^1.0.1",
+    "@getsafle/vault-bitcoin-controller": "^1.0.0",
+    "@getsafle/vault-bsc-controller": "^1.0.0",
     "@getsafle/vault-eth-controller": "^1.0.1",
+    "@getsafle/vault-polygon-controller": "^1.0.0",
     "bip39": "^3.0.4",
     "browser-passworder": "^2.0.3",
     "crypto-js": "^4.0.0",
