--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@getsafle/safle-vault",
-  "version": "1.2.9",
+  "version": "1.3.0",
   "description": "Safle Vault is a non-custodial, flexible and highly available crypto wallet which can be used to access dapps, send/receive crypto and store identity. Vault SDK is used to manage the vault and provide methods to generate vault, add new accounts, update the state and also enable the user to perform several vault related operations.",
   "main": "src/index.js",
   "scripts": {
@@ -48,6 +48,7 @@
     "crypto-js": "^4.0.0",
     "eth-hd-keyring": "^3.6.0",
     "ethereumjs-util": "^7.1.2",
+    "ethers": "^5.5.3",
     "get-random-values": "^1.2.2",
     "loglevel": "^1.7.1",
     "obs-store": "^4.0.3",
