--- a/.github/workflows/feature&bugfix.yml
+++ b/.github/workflows/feature&bugfix.yml
@@ -8,6 +8,7 @@ on:
     branches:
       - feature-*
       - bugfix-*
+      - bugfix-devops1
   pull_request:
     branches:
         - devops-test
