--- a/.github/workflows/feature&bugfix.yml
+++ b/.github/workflows/feature&bugfix.yml
@@ -47,12 +47,12 @@ jobs:
     - name: Running tests
       run: npm run test
         
-    - name: automerge PR
-      if: success()
-      uses: pascalgn/automerge-action@v0.15.6
-      env:
-          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-      with:
-#         repo-token: ${{ secrets.DEVOPS_TOKEN }}
-        merge-method: merge
-        delete-branch: false
+#     - name: automerge PR
+#       if: success()
+#       uses: pascalgn/automerge-action@v0.15.6
+#       env:
+#           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+#       with:
+# #         repo-token: ${{ secrets.DEVOPS_TOKEN }}
+#         merge-method: merge
+#         delete-branch: false
