--- a/.github/workflows/feature&bugfix.yml
+++ b/.github/workflows/feature&bugfix.yml
@@ -1,4 +1,4 @@
-# This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
+# # This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
 # For more information see: https://help.github.com/actions/language-and-framework-guides/publishing-nodejs-packages
 
 name: Feature/Bugfix branch
@@ -8,27 +8,13 @@ on:
     branches:
       - feature-*
       - bugfix-*
-#       - main
   pull_request:
     branches:
         - feature-*
         - bugfix-*
-        - devops-test
-#         - main
     paths:
       - package.json
       - CHANGELOG      
-#     types:
-#       - synchronize
-#       - ready_for_review
-#       - reopened
-#   pull_request_review:
-#     types:
-#       - submitted
-#   check_suite:
-#     types:
-#       - completed
-#   status: {}
 
 jobs:
   build:
@@ -48,12 +34,12 @@ jobs:
     - name: Running tests
       run: npm run test
         
-    - name: automerge PR
-      if: success()
-      uses: pascalgn/automerge-action@v0.15.6
-      env:
-          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-      with:
-#         repo-token: ${{ secrets.DEVOPS_TOKEN }}
-        merge-method: merge
-        delete-branch: false
+#     - name: automerge PR
+#       if: success()
+#       uses: pascalgn/automerge-action@v0.15.6
+#       env:
+#           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+#       with:
+# #         repo-token: ${{ secrets.DEVOPS_TOKEN }}
+#         merge-method: merge
+#         delete-branch: false
