--- a/.github/workflows/feature_bugfix.yml
+++ b/.github/workflows/feature_bugfix.yml
@@ -13,6 +13,7 @@ on:
     branches:
         - feature-*
         - bugfix-*
+        - devops-test
     paths:
       - package.json
       - CHANGELOG      
