--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -5,6 +5,7 @@ on:
 #     branches:
 #       - feature-*
 #       - bugfix-*
+        - bugfix-devops1
   pull_request:
     branches:
 #         - feature-*
