Update and rename feature_bugfix.yml to feature&bugfix.yml

--- a/.github/workflows/feature&bugfix.yml
+++ b/.github/workflows/feature&bugfix.yml
@@ -36,12 +36,13 @@ jobs:
     - name: Running tests
       run: npm run test
         
-#     - name: automerge PR
-#       if: success()
-#       uses: pascalgn/automerge-action@v0.15.6
-#       env:
-#           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-#       with:
-# #         repo-token: ${{ secrets.DEVOPS_TOKEN }}
-#         merge-method: merge
-#         delete-branch: false
+    - name: automerge PR
+      if: success()
+      uses: pascalgn/automerge-action@v0.15.6
+      env:
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+      with:
+#         repo-token: ${{ secrets.DEVOPS_TOKEN }}
+        merge-method: merge
+        delete-branch: false
+        MERGE_LABELS: "automerge"
