--- a/.github/workflows/feature&bugfix.yml
+++ b/.github/workflows/feature&bugfix.yml
@@ -41,7 +41,7 @@ jobs:
     needs: build
     steps:
     - name: automerge PR
-      if: success()
+#       if: success()
       uses: pascalgn/automerge-action@v0.15.6
       env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
