--- a/.github/workflows/feature&bugfix.yml
+++ b/.github/workflows/feature&bugfix.yml
@@ -41,12 +41,12 @@ jobs:
     needs: build
     steps:
     - name: automerge PR
-#       if: success()
+      if: success()
       uses: pascalgn/automerge-action@v0.15.6
       env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
       with:
 #         repo-token: ${{ secrets.DEVOPS_TOKEN }}
-        merge-method: merge
+#         merge-method: merge
         delete-branch: false
-        MERGE_LABELS: "automerge"
+        MERGE_LABELS: ""
