--- a/.github/workflows/feature&bugfix.yml
+++ b/.github/workflows/feature&bugfix.yml
@@ -16,7 +16,24 @@ on:
         - devops-test
     paths:
       - package.json
-      - CHANGELOG      
+      - CHANGELOG 
+#     types:
+#       - labeled
+#       - unlabeled
+#       - synchronize
+#       - opened
+#       - edited
+#       - ready_for_review
+#       - reopened
+#       - unlocked
+#   pull_request_review:
+#     types:
+#       - submitted
+#   check_suite:
+#     types:
+#       - completed
+#   status: {}  
+      
 
 jobs:
   build:
