--- a/.github/workflows/feature&bugfix.yml
+++ b/.github/workflows/feature&bugfix.yml
@@ -62,8 +62,8 @@ jobs:
       uses: pascalgn/automerge-action@v0.15.6
       env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-      with:
+#       with:
 #         repo-token: ${{ secrets.DEVOPS_TOKEN }}
 #         merge-method: merge
-        delete-branch: false
-        MERGE_LABELS: ""
+#         delete-branch: false
+#         MERGE_LABELS: ""
