--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,8 +6,7 @@ name: Main Branch
 on:
   push:
     branches:
-#       - main
-      - bugfix-devops1
+      - main
     paths:
       - package.json
       - CHANGELOG
@@ -22,21 +21,6 @@ jobs:
           node-version: 14
       - run: npm ci
       - run: npm run test
-      
-      - name: Jest Coverage Comment
-        uses: MishaKav/jest-coverage-comment@main
-        with:
-          coverage-summary-path: ./coverage/coverage-summary.json
-          title: My Jest Coverage Comment
-          summary-title: My Summary Title
-          badge-title: Coverage
-          hide-comment: false
-          create-new-comment: false
-          hide-summary: false
-          junitxml-title: My JUnit Title
-          junitxml-path: ./coverage/junit.xml
-          coverage-title: My Coverage Title
-          coverage-path: ./coverage.txt
 
   publish-npm:
     needs: build
