--- a/.github/workflows/feature&bugfix.yml
+++ b/.github/workflows/feature&bugfix.yml
@@ -51,9 +51,6 @@ jobs:
       run: npm ci
       
     - name: Running tests
-#       run: npm run test
-      
-#     - name: Run tests
       run: |
        npm run test
        npx jest --coverage | tee ./coverage.txt && exit ${PIPESTATUS[0]}
@@ -62,4 +59,33 @@ jobs:
       uses: MishaKav/jest-coverage-comment@main
       with:
         coverage-path: ./coverage.txt
+       
+  update-coverage-in-readme:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
+          fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
+
+      - name: Jest Coverage Comment
+        if: github.ref == 'refs/heads/main'
+        id: coverageComment
+        uses: MishaKav/jest-coverage-comment@main
+        with:
+          hide-summary: true
+          coverage-summary-path: ./coverage/coverage-summary.json
+
+      - name: Update README with Coverage HTML
+        if: github.ref == 'refs/heads/main'
+        run: |
+          sed -i '/<!-- Jest Coverage Comment:Begin -->/,/<!-- Jest Coverage Comment:End -->/c\<!-- Jest Coverage Comment:Begin -->\n\${{ steps.coverageComment.outputs.summaryHtml }}\n<!-- Jest Coverage Comment:End -->' ./README.md
+
+      - name: Commit & Push changes in README
+        if: github.ref == 'refs/heads/main'
+        uses: actions-js/push@master
+        with:
+          message: Update coverage in README
+          github_token: ${{ secrets.GITHUB_TOKEN }}       
         
