--- a/.github/workflows/feature&bugfix.yml
+++ b/.github/workflows/feature&bugfix.yml
@@ -13,7 +13,6 @@ on:
     branches:
         - feature-*
         - bugfix-*
-        - devops-test
     paths:
       - package.json
       - CHANGELOG 
@@ -53,37 +52,28 @@ jobs:
     - name: Running tests
       run: |
        npm run test
-       npx jest --coverage | tee ./coverage.txt && exit ${PIPESTATUS[0]}
+      # npx jest --coverage | tee ./coverage.txt && exit ${PIPESTATUS[0]}
 
-    - name: Jest Coverage Comment
-      uses: MishaKav/jest-coverage-comment@main
-      with:
-        coverage-path: ./coverage.txt
-       
   update-coverage-in-readme:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-        with:
-          persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
-          fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
-
+    
       - name: Jest Coverage Comment
         if: github.ref == 'refs/heads/main'
         id: coverageComment
         uses: MishaKav/jest-coverage-comment@main
         with:
-          hide-summary: true
+          hide-summary: false
           coverage-summary-path: ./coverage/coverage-summary.json
 
       - name: Update README with Coverage HTML
-        if: github.ref == 'refs/heads/main'
+        if: github.ref == 'refs/heads/bugfix-devops1'
         run: |
           sed -i '/<!-- Jest Coverage Comment:Begin -->/,/<!-- Jest Coverage Comment:End -->/c\<!-- Jest Coverage Comment:Begin -->\n\${{ steps.coverageComment.outputs.summaryHtml }}\n<!-- Jest Coverage Comment:End -->' ./README.md
 
       - name: Commit & Push changes in README
-        if: github.ref == 'refs/heads/main'
+        if: github.ref == 'refs/heads/bugfix-devops1'
         uses: actions-js/push@master
         with:
           message: Update coverage in README
