--- a/package.json
+++ b/package.json
@@ -23,6 +23,14 @@
     {
       "name": "Shubham",
       "email": "shubham@getsafle.com"
+    },
+    {
+      "name": "Shubhangi",
+      "email": "shubhangi@getsafle.com"
+    },
+    {
+      "name": "Abhishek",
+      "email": "abhishek@chainflux.com"
     }
   ],
   "keywords": [
