--- a/.github/workflows/nightly-release.yml
+++ b/.github/workflows/nightly-release.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           node-version: 16.16.0
       - run: npm ci
-      - run: npm run test
+#       - run: npm run test
 
   publish-npm:
     needs: build
