--- a/.github/workflows/other-branches.yml
+++ b/.github/workflows/other-branches.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Setting up Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '16.16.0'
+        node-version: 18.x
 
     - name: Installing dependencies 
       run: npm ci
