--- a/package.json
+++ b/package.json
@@ -67,7 +67,9 @@
     "@getsafle/vault-stacks-controller": "^1.0.5",
     "@getsafle/vault-velas-controller": "^1.3.1",
     "bip39": "^3.0.4",
+    "crypto": "^1.0.1",
     "crypto-js": "^4.1.1",
+    "eth-sig-util": "^3.0.1",
     "ethers": "^5.5.3",
     "jest": "^29.4.3",
     "limiter": "^2.1.0",
