--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "@getsafle/vault-bitcoin-controller": "^2.0.7",
     "@getsafle/vault-bsc-controller": "^1.2.4",
     "@getsafle/vault-eth-controller": "^1.4.6",
-    "@getsafle/vault-evm-controller": "^1.0.0",
+    "@getsafle/vault-evm-controller": "^1.0.1",
     "@getsafle/vault-mantle-controller": "^1.0.1",
     "@getsafle/vault-optimism-controller": "^1.0.8",
     "@getsafle/vault-polygon-controller": "^1.2.8",
@@ -69,6 +69,7 @@
     "bip39": "^3.0.4",
     "crypto": "^1.0.1",
     "crypto-js": "^4.1.1",
+    "dotenv": "^16.4.5",
     "eth-sig-util": "^3.0.1",
     "ethers": "^5.5.3",
     "jest": "^29.4.3",
