updating concordium version

--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@getsafle/vault-bevm-controller": "^1.0.3",
     "@getsafle/vault-bitcoin-controller": "^2.0.7",
     "@getsafle/vault-bsc-controller": "^1.2.4",
+    "@getsafle/vault-concordium-controller": "^1.0.1",
     "@getsafle/vault-eth-controller": "^1.4.6",
     "@getsafle/vault-evm-controller": "^1.0.1",
     "@getsafle/vault-mantle-controller": "^1.0.1",
